// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FadeIntoView should render link text 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transform": "translateY(100px)",
    }
  }
>
  <a
    href="http://www.google.com"
  >
    Boo!
  </a>
</div>
`;

exports[`FadeIntoView should render simple text 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transform": "translateY(100px)",
    }
  }
>
  <p>
    Boo!
  </p>
</div>
`;
